--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-three/fiber": "^9.3.0",
     "framer-motion": "^12.23.12",
     "next": "^15.4.1",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sass": "^1.91.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.0.14",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
